fixing image path in sample

--- a/sample/text-overlays.html
+++ b/sample/text-overlays.html
@@ -26,7 +26,7 @@
                 autoTime: 5000,
                 images: [
                     {
-                        imageUrl: 'img/2.jpg',
+                        imageUrl: 'img/2.png',
                         textTitle: 'Title for Slide 1',
                         textBody: 'This is the body for slide 1.'
                     },
