corrected text in sample

--- a/sample/text-overlays.html
+++ b/sample/text-overlays.html
@@ -7,7 +7,7 @@
         <div style='width: 1200px; max-width: 100%; margin: auto'>
             <div id='slider-1'></div>
         </div>
-        <h4>This slider is made with all options available in the <i>options</i> parameter.<br>Slides 2 and 4 have links.</h4>
+        <h4>This slider is made with all options available in the <i>options</i> parameter.<br>Slide 5 has a link.</h4>
         <br>
         <br>
         
