added static text options in sample

--- a/sample/custom-options.html
+++ b/sample/custom-options.html
@@ -27,6 +27,9 @@
                 swipe: true,
                 auto: true,
                 autoTime: 5000,
+                staticTextTitle: "Hello World!",
+                staticTextBody: "This is the static text body.",
+                staticText: "NW",
                 images: [
                     'img/7.jpg',
                     {
