staticTextPosition in sample

--- a/sample/custom-options.html
+++ b/sample/custom-options.html
@@ -29,7 +29,7 @@
                 autoTime: 5000,
                 staticTextTitle: "Hello World!",
                 staticTextBody: "This is the static text body.",
-                staticText: "NW",
+                staticTextPosition: "NW",
                 images: [
                     'img/7.jpg',
                     {
